fix phone number visibility on safari

--- a/css/styles.css
+++ b/css/styles.css
@@ -224,6 +224,11 @@ h1, h2, h3, h4, h5, h6 {
 #page-contact .contact-info p {
     font-size: 1.2em;
 }
+/* in order to show the phone numbers in safari iOS */
+a[href^=tel] {
+    color: inherit;
+    text-decoration: none;
+}
 
 /* ==========================================================================
    Vegas slider
